--- a/resources/config.edn.example
+++ b/resources/config.edn.example
@@ -1,3 +1,5 @@
-{
-    :foo 42
-}
+{:db {:dbtype "postgresql"
+      :dbname "project"
+      :host "localhost"
+      :user "project"
+      :password "project"}}
