logging to file added

--- a/ansible/playbooks/web-cron.yaml
+++ b/ansible/playbooks/web-cron.yaml
@@ -15,7 +15,7 @@
 
     - name: Update users
       cron:
-        name: Update feeds
+        name: Update users
         user: "{{ user }}"
         hour: "*/1"
         minute: "30"
